contrast fix 2

--- a/project/styles/website.css
+++ b/project/styles/website.css
@@ -100,6 +100,7 @@ nav {
 .hero-trips {
     display: grid;
     grid-template-columns: 1fr;
+    background-color: var(--accent-color);
 }
 
 .hero-trips {
@@ -129,12 +130,6 @@ nav {
     margin-bottom: 0.5rem;
     font-family: var(--primary-font);
     font-weight: bold;
-    color: white;
-    text-shadow:
-        -1px -1px 0 #000,
-        1px -1px 0 #000,
-        -1px  1px 0 #000,
-        1px  1px 0 #000;
 }
 
 .hero-content {
@@ -152,13 +147,6 @@ nav {
     font-size: 1rem;
     margin-bottom: 1.25rem;
     font-family: var(--secondary-font);
-    color: white;
-    text-shadow:
-        -1px -1px 0 #000,
-        1px -1px 0 #000,
-        -1px  1px 0 #000,
-        1px  1px 0 #000;
-    
 }
 
 .btn-primary {
